test: the persistence boolean value keeps the JVMArgs or not